testdata/golden/sema/invalid/max_missing_type.fmt
// scenario: max_value without explicit type arguments must fail inference
fn usage() {
    let m = max_value();
}
